gccida/c1/form_sum
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/form_sum/src/reload.c:5524:25: error: expected expression
v14 = form_sum( *( rtx *)&v9[1], v3); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/form_sum/src/reload.c:5536:31: error: expected expression
return form_sum( v18, *( rtx *)&v3[1]); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/form_sum/src/reload.c:5549:31: error: use of undeclared identifier 'machine_mode'
v21 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v6, v9, v3); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/form_sum/src/reload.c:5554:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v6, v9, v3); 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/form_sum/src/obj/reload.o] Error 1
